# wimer

./: LICENSE  README.md
src/: CMakeLists.txt  main.cpp  wimer.rc
src/lib/: CMakeLists.txt  lib.cpp  wimer.h
